@@ -208,3 +208,5 @@ Details of changes made to refnx
   between 'pointwise' or 'constant'.
 - Add progress bar for Curvefitter.fit() (requires tqdm being installed).
 - A few micro-optimisations.
+- Optimized pickling/unpickling of Bounds instances. This can lead to a huge
+  performance increase (~ 40%) when doing parallel sampling.
